Objetivo now saves

--- a/public/partials/carta.html
+++ b/public/partials/carta.html
@@ -87,7 +87,7 @@
 													</tr>
 												</thead>
 												<tfoot>
-													<tr>
+													<tr class="hidden">
 														<th colspan="{{1 + formula.valores[aanualidad].length}}"><p><strong>{{formula.computer}}</strong></p></th>
 													</tr>
 													<tr>
