--- a/public/partials/objetivo.html
+++ b/public/partials/objetivo.html
@@ -1,3 +1,9 @@
+<ol class="breadcrumb">
+    <li><a href="/carta/{{carta.idjerarquia}}">{{carta.denominacion}}</a></li>
+    <li class="active"><a href="/objetivo/{{objetivo._id}}">{{objetivo.denominacion}}</a></li>
+</ol>
+
+
 <div class="panel panel-default">
     <div class="panel-heading">
         <span class="pull-right label label-primary" style="font-size: 10pt;">{{objetivo.estado}}</span>
