--- a/public/partials/indicador.html
+++ b/public/partials/indicador.html
@@ -1,3 +1,7 @@
+<ol class="breadcrumb">
+    <li><a href="/carta/{{carta.idjerarquia}}">{{carta.denominacion}}</a></li>
+    <li><a href="/objetivo/{{objetivo._id}}">{{objetivo.denominacion}}</a></li>
+</ol>
 <div class="row">
     <div class="col-lg-12">
         <div style="clear:both" class="table-responsive">
@@ -20,7 +24,7 @@
                             <input ng-model="indicador.resturl" class="form-control" />
                         </td>
                         <td>
-                            {{indicador.frecuencia}}
+                            <select ng-model="indicador.frecuencia" ng-options="o as o for o in frecuenciasIndicadores" class="form-control"></select>
                         </td>
                         <td>
                             <select ng-model="indicador.acumulador" ng-options="func.value as func.name for func in functions" class="form-control"></select>
