--- a/public/partials/actividad.html
+++ b/public/partials/actividad.html
@@ -37,7 +37,7 @@
 						</div>
 					</div>
 
-					<div class="form-group col-sm-12"  ng-repeat="(familia,etiquetas) in etiquetasPorTipo track by $index" >
+					<div class="form-group col-sm-12 hidden"  ng-repeat="(familia,etiquetas) in etiquetasPorTipo track by $index" >
 						<label class="control-label col-sm-3">{{familia}}:</label>
 						<div class="col-sm-9">
 							<div ng-repeat="etiqueta in etiquetas track by $index" class="col-sm-6">
